Adiciona camada de validação nas ocorrencias sobre bairros. Closes #4
